--- a/tests/gama-local/input/Makefile.am
+++ b/tests/gama-local/input/Makefile.am
@@ -69,4 +69,41 @@ EXTRA_DIST = \
   sim/from-to-dh.gkf \
   sim/from-to-dh.xml \
   \
-  Ghilani_GNSS_Baselines.gkf Ghilani_GNSS_Baselines.xml
+  krumm/1D/Baumann_Height_fix.gkf      krumm/1D/Krumm_Height_fix.gkf \
+  krumm/1D/Baumann_Height_fix.xml      krumm/1D/Krumm_Height_fix.xml \
+  krumm/1D/Ghilani12_6_Height_fix.gkf  krumm/1D/Niemeier_Height_fix1.gkf \
+  krumm/1D/Ghilani12_6_Height_fix.xml  krumm/1D/Niemeier_Height_fix1.xml \
+  krumm/1D/Krumm_Height_dyn.gkf        krumm/1D/Niemeier_Height_free.gkf \
+  krumm/1D/Krumm_Height_dyn.xml        krumm/1D/Niemeier_Height_free.xml \
+  krumm/2D/Benning82_Distance_fix.gkf                krumm/2D/Grossmann_Direction_fix.xml \
+  krumm/2D/Benning82_Distance_fix.xml                krumm/2D/Hoepke_Distance_free.gkf \
+  krumm/2D/Benning83_DistanceDirection_fix.gkf       krumm/2D/Hoepke_Distance_free.xml \
+  krumm/2D/Benning83_DistanceDirection_fix.xml       krumm/2D/LotherStrehle_Direction1.gkf \
+  krumm/2D/Benning85.gkf                             krumm/2D/LotherStrehle_Direction1.xml \
+  krumm/2D/Benning85.xml                             krumm/2D/LotherStrehle_Direction2.gkf \
+  krumm/2D/Benning88_Distance_fix.gkf                krumm/2D/LotherStrehle_Direction2.xml \
+  krumm/2D/Benning88_Distance_fix.xml                krumm/2D/LotherStrehle_Direction3.gkf \
+  krumm/2D/Carosio_DistanceDirection_fix.gkf         krumm/2D/LotherStrehle_Direction3.xml \
+  krumm/2D/Carosio_DistanceDirection_fix.xml         krumm/2D/LotherStrehle_Direction4.gkf \
+  krumm/2D/Ghilani14_5_Distance_fix.gkf              krumm/2D/LotherStrehle_Direction4.xml \
+  krumm/2D/Ghilani14_5_Distance_fix.xml              krumm/2D/LotherStrehle_Direction5.gkf \
+  krumm/2D/Ghilani15_4_Angle_fix.gkf                 krumm/2D/LotherStrehle_Direction5.xml \
+  krumm/2D/Ghilani15_4_Angle_fix.xml                 krumm/2D/LotherStrehle_Direction7.gkf \
+  krumm/2D/Ghilani15_5_Angle_fix.gkf                 krumm/2D/LotherStrehle_Direction7.xml \
+  krumm/2D/Ghilani15_5_Angle_fix.xml                 krumm/2D/Niemeier_DistanceDirection_fix.gkf \
+  krumm/2D/Ghilani16_1_Traverse.gkf                  krumm/2D/Niemeier_DistanceDirection_fix.xml \
+  krumm/2D/Ghilani16_1_Traverse.xml                  krumm/2D/StrangBorre_Distance_fix.gkf \
+  krumm/2D/Ghilani16_2_DistanceAngleAzimuth_fix.gkf  krumm/2D/StrangBorre_Distance_fix.xml \
+  krumm/2D/Ghilani16_2_DistanceAngleAzimuth_fix.xml  krumm/2D/StrangBorre_Distance_free.gkf \
+  krumm/2D/Ghilani21_10_DistanceAngle_fix.gkf        krumm/2D/StrangBorre_Distance_free.xml \
+  krumm/2D/Ghilani21_10_DistanceAngle_fix.xml        krumm/2D/WeissEtAl_Distance_fix.gkf \
+  krumm/2D/Ghilani_Wolf_Distance_Angle.gkf           krumm/2D/WeissEtAl_Distance_fix.xml \
+  krumm/2D/Ghilani_Wolf_Distance_Angle.xml           krumm/2D/Wolf_DistanceDirectionAngle_free.gkf \
+  krumm/2D/Grossmann_Direction_fix.gkf               krumm/2D/Wolf_DistanceDirectionAngle_free.xml \
+  krumm/3D/Baumann23_3_4_fix.gkf       krumm/3D/Wolf_3D_Distance_fix.gkf \
+  krumm/3D/Baumann23_3_4_fix.xml       krumm/3D/Wolf_3D_Distance_fix.xml \
+  krumm/3D/Caspary.gkf                 krumm/3D/Wolf_3D_DistanceVerticalAngle_fix.gkf \
+  krumm/3D/Caspary.xml                 krumm/3D/Wolf_3D_DistanceVerticalAngle_fix.xml \
+  krumm/3D/Ghilani_GNSS_Baselines.gkf  krumm/3D/Wolf_SpatialPolygonTraverse_fix.gkf \
+  krumm/3D/Ghilani_GNSS_Baselines.xml  krumm/3D/Wolf_SpatialPolygonTraverse_fix.xml
+ 
