Fix the bug in test linearization visitor for Angle
The visitor did not test if the right hand direction of the angle
pointed to a fixed point or to an adjustment point. If it was a fixed
point visitor added corrections from vector x with index 0, i.e. index
outside the vector.

Added file bug/test-linearization-angle.gkf and .xml to test all
possible combinations of angles with fixed and adjusment points.

The bug was reported by Greg Troxel on netbsd 9 amd64.

--- a/tests/gama-local/Makefile.am
+++ b/tests/gama-local/Makefile.am
@@ -85,7 +85,8 @@ BUG_FILES =   bug/tst-tetrahedron-1 \
               bug/extern-tst-tetrahedron-3-gon \
               bug/2019-08-06-integer-coordinates \
               bug/2019-08-13-traverse-knin_male \
-              bug/2019-08-20-knin_test
+              bug/2019-08-20-knin_test \
+              bug/test-linearization-angle
 
 
 CTU_FILES =   ctu/2020-barta-phase_0-1TK ctu/2020-barta-phase_0-2TK \
