Add a test on conversion of coordinates XYZ to ellipsoidal BLH and back Add an implicit constructor to the Ellipsoid class (implicit ellipsoid is SWG 84) and enable the next iteration in xyz2blh(), which improves the transformation XYZ to BLS from 1e-7 to 1e-9 meters.

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ tests/gama-local/scripts/check_xml_coordinates
 tests/gama-local/scripts/sqlite_init_db
 tests/gama-local/xmllint-gama-local-xsd
 tests/gama-local/xmllint-gama-local-adjustment-xsd
+tests/gama-g3/src/check_ellipsoid_xyz2blh
 tests/krumm/cmp_xml_file
 #
 doc/version.texi
