--- a/tests/gama-g3/input/Makefile.am
+++ b/tests/gama-g3/input/Makefile.am
@@ -1,6 +1,9 @@
 EXTRA_DIST = demo-g3-01.xml demo-g3-01-adj.xml \
              demo-g3-02.xml demo-g3-02-adj.xml \
              demo-g3-03.xml demo-g3-03-adj.xml \
+             ghilani-gnss-v1.xml ghilani-gnss-v1-adj.xml \
+             ghilani-gnss-v2.xml ghilani-gnss-v3-adj.xml \
+             ghilani-gnss-v3.xml ghilani-gnss-v3-adj.xml \
              sjtsk05/dopnul.xml \
              sjtsk05/dopnul.adj.xml \
              sjtsk05/vyberova_udrzba.xml \
