--- a/tests/gama-g3/input/Makefile.am
+++ b/tests/gama-g3/input/Makefile.am
@@ -5,6 +5,6 @@ EXTRA_DIST = demo-g3-01.xml demo-g3-01-adj.xml \
              ghilani-gnss-v2.xml ghilani-gnss-v3-adj.xml \
              ghilani-gnss-v3.xml ghilani-gnss-v3-adj.xml \
              sjtsk05/dopnul.xml \
-             sjtsk05/dopnul.adj.xml \
+             sjtsk05/dopnul-adj.xml \
              sjtsk05/vyberova_udrzba.xml \
-             sjtsk05/vyberova_udrzba.adj.xml
+             sjtsk05/vyberova_udrzba-adj.xml
