--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,8 @@ GAMA_LOCAL = gama-local \
              gama-local-xml2txt \
              gama-local-xml2sql \
              gama-local-gkf2yaml \
-             krumm2gama-local
+             krumm2gama-local \
+             xml2defo
 
 if GNU_GAMA_G3_ENABLED
    GAMA_G3 = gama-g3
@@ -50,3 +51,7 @@ endif
 krumm2gama_local_SOURCES  = krumm2gama-local.cpp
 krumm2gama_local_CPPFLAGS = -I $(top_srcdir)/lib
 krumm2gama_local_LDADD    = $(top_builddir)/lib/libgama.a
+
+xml2defo_SOURCES  = xml2defo.cpp
+xml2defo_CPPFLAGS = -I $(top_srcdir)/lib
+xml2defo_LDADD    = $(top_builddir)/lib/libgama.a
